--- a/includes/db/history.txt
+++ b/includes/db/history.txt
@@ -29,3 +29,8 @@
 11-24-25 | - 24: tusok + photocopy
 11-24-25 | - 28: ice creaaammm
 11-24-25 | - 34: pauwi
+11-26-25 | - 20: toothbrush
+11-26-25 | - 20: mefenamic 2
+11-26-25 | - 176: book
+11-26-25 | - 12: to match current balance (prolly sa uncounted tryc yung 10, + 2 sa jeep rating mismatch)
+11-26-25 | + 1000: allowance for last week of november
