--- a/includes/db/history.txt
+++ b/includes/db/history.txt
@@ -1,3 +1,3 @@
-11-30-25 | + 1: no comment.
-11-30-25 | + 20000: sample comment
-December 2, 2025 | - 5000: Invested on goal "laptop".11-30-25 | - 7000: Invested on goal "laptop".
+12-5-25 | + 100: sample balance lang for goal
+12-5-25 | - 1: Invested on goal "GTX 1650TI".
+12-5-25 | - 2: Invested on goal "GTX 1650TI".
