implemented goal-completion

--- a/includes/db/history.txt
+++ b/includes/db/history.txt
@@ -1,3 +1,5 @@
 12-07-25 | + 401: no comment.
 12-07-25 | - 1: Invested on goal "external pcie".
 12-07-25 | - 399: Invested on goal "external pcie".
+12-08-25 | + 400: no comment.
+12-08-25 | - 400: Invested on goal "controller".
