--- a/includes/db/history.txt
+++ b/includes/db/history.txt
@@ -3,3 +3,13 @@
 12-07-25 | - 399: Invested on goal "external pcie".
 12-08-25 | + 400: no comment.
 12-08-25 | - 400: Invested on goal "controller".
+12-08-25 | + 2: no comment.
+12-08-25 | + 2: no comment.
+12-08-25 | + 2: no comment.
+12-08-25 | - 2: no comment.
+12-08-25 | + 4000: no comment.
+12-08-25 | - 4000: Invested on goal "gpu".
+12-08-25 | - 2: Invested on goal "laptop".
+12-08-25 | - 2: Invested on goal "2".
+12-08-25 | + 200: no comment.
+12-08-25 | - 2: Invested on goal "2".
